Add examples of numpy extensions Add additional observations

--- a/notebooks/Linear Algebra of Red Black Graphs.ipynb
+++ b/notebooks/Linear Algebra of Red Black Graphs.ipynb
@@ -217,6 +217,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Numpy Implementation\n",
+    "\n",
+    "There is an [expiremental fork of numpy](https://github.com/rappdw/numpy) that provides an implementation of Red Black graphs by subclassing `ndarray` (as `rbarray`) and `matrix` (as `rbmatrix`). \n",
+    "\n",
+    "A simple example of usage follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1,  2,  3,  4,  0],\n",
+       "       [ 0, -1,  0,  2,  0],\n",
+       "       [ 0,  0,  1,  0,  0],\n",
+       "       [ 0,  0,  0, -1,  0],\n",
+       "       [ 2,  4,  5,  0,  1]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "A = np.rbarray([[-1,  2,  3,  0,  0], # could also use np.rbmatrix(...)\n",
+    "                [ 0, -1,  0,  2,  0],\n",
+    "                [ 0,  0,  1,  0,  0],\n",
+    "                [ 0,  0,  0,  -1, 0],\n",
+    "                [ 2,  0,  0,  0,  1]], dtype=np.int64)\n",
+    "A @ A # matrix multiplication overridden to provide the avos matrix product\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 3, 0, 0, 0])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = np.array([0, 3, 0, 0, 0], dtype=np.int64) # vector-matrix and matrix-vector avos product also available\n",
+    "\n",
+    "A @ v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Areas of Further investigation\n",
     "\n",
     "* Determinants\n",
