--- a/notebooks/Red Black Graphs.ipynb
+++ b/notebooks/Red Black Graphs.ipynb
@@ -115,7 +115,15 @@
     "\n",
     "\\begin{equation*}\n",
     "trace(A_{rb}) = |V_{black}| - |V_{red}|\n",
-    "\\end{equation*} "
+    "\\end{equation*} \n",
+    "\n",
+    "\\begin{equation*}\n",
+    "|V| = |V_{black}| + |V_{red}|\n",
+    "\\end{equation*}\n",
+    "\n",
+    "\\begin{equation*}\n",
+    "|V_{black}| = \\frac{|V| + trace(A_{rb})}{2}\n",
+    "\\end{equation*}\n"
    ]
   },
   {
