--- a/notebooks/Red Black Graphs.ipynb
+++ b/notebooks/Red Black Graphs.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# TODO:\n",
+    "\n",
+    "1. Document steps/learnings from extending Numpy\n",
+    "2. Warshall implementation in Numpy\n",
+    "3. Consider adding an extra param to c_einsum to select type of sop function to use, rather than a seperate c_einsum2 (it's cleaner)\n",
+    "4. Add rb_matrix to Scipy sparse \n",
+    "5. Document steps/learnings from extending Scipy\n",
+    "6. Warshall implementation in Scipy\n",
+    "7. Consider licensing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Red Black Graph - a DAG of Multiple, Interleaved Binary Trees\n",
     "\n",
     "## Introduction\n",
