Dwr/numpy extension (#3)
* attempt to get Numpy extension working rather than modifying Numpy for avos einsum function

* Initial implementation of Numpy extension module that implements c_einsum_avos

* Implement rbarray and rbmatrix - similar to ndarray but with avos linear algebra

--- a/notebooks/Red Black Graphs.ipynb
+++ b/notebooks/Red Black Graphs.ipynb
@@ -4,6 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# TODO:\n",
+    "\n",
+    "1. Warshall implementation using Numpy C-API\n",
+    "2. Add rb_matrix to Scipy sparse \n",
+    "3. Document steps/learnings from extending Scipy\n",
+    "4. Warshall implementation in Scipy\n",
+    "5. Consider licensing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Red Black Graph - a DAG of Multiple, Interleaved Binary Trees\n",
     "\n",
     "## Introduction\n",
