Correct typos in notebook Add reslationship_file_parser to illustrate application of RedBlackGraph

--- a/notebooks/Python Implementation.ipynb
+++ b/notebooks/Python Implementation.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Optimized Python Implementation(s)\n",
     "\n",
-    "In the previous workbooks, a simple implementation was provided in pure python. For a number of reasons, extension modules are provided by Numpy, SciPy, etc. for optimized matrix operations. The redblakcgraph module also provides extension model implementations that are described below\n",
+    "In the previous workbooks, a simple implementation was provided in pure python. For a number of reasons, extension modules are provided by Numpy, SciPy, etc. for optimized matrix operations. The redblackgraph module also provides extension model implementations that are described below\n",
     "\n",
-    "## rbarray / rbmatrix\n",
+    "## rb.array / rb.matrix\n",
     "\n",
     "The redblackgraph module provides two Numpy-like implementations, one of array (rbarray) and one of matrix (rbmatrix).\n",
     "\n",
