Dwr/relational composition (#5)
Implement relational composition as a gufunc

--- a/notebooks/Python Implementation.ipynb
+++ b/notebooks/Python Implementation.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Optimized Python Implementation(s)\n",
     "\n",
-    "In the previous workbooks, a simple implementation was provided in pure python. For a number of reasons, extension modules are provided by Numpy, SciPy, etc. for optimized matrix operations. The redblakcgraph module also provides extension model implementations that are described below\n",
+    "In the previous workbooks, a simple implementation was provided in pure python. For a number of reasons, extension modules are provided by Numpy, SciPy, etc. for optimized matrix operations. The redblackgraph module also provides extension model implementations that are described below\n",
     "\n",
-    "## rbarray / rbmatrix\n",
+    "## rb.array / rb.matrix\n",
     "\n",
     "The redblackgraph module provides two Numpy-like implementations, one of array (rbarray) and one of matrix (rbmatrix).\n",
     "\n",
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from redblackgraph import rbarray, rbmatrix\n",
+    "from redblackgraph import array, matrix, warshall\n",
     "import numpy as np"
    ]
   },
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = rbarray([[-1,  2,  3,  0,  0],\n",
+    "A = array([[-1,  2,  3,  0,  0],\n",
     "             [ 0, -1,  0,  2,  0],\n",
     "             [ 0,  0,  1,  0,  0],\n",
     "             [ 0,  0,  0, -1,  0],\n",
@@ -48,11 +48,11 @@
     {
      "data": {
       "text/plain": [
-       "rbarray([[-1,  2,  3,  4,  0],\n",
-       "         [ 0, -1,  0,  2,  0],\n",
-       "         [ 0,  0,  1,  0,  0],\n",
-       "         [ 0,  0,  0, -1,  0],\n",
-       "         [ 2,  4,  5,  8,  1]])"
+       "array([[-1,  2,  3,  4,  0],\n",
+       "       [ 0, -1,  0,  2,  0],\n",
+       "       [ 0,  0,  1,  0,  0],\n",
+       "       [ 0,  0,  0, -1,  0],\n",
+       "       [ 2,  4,  5,  8,  1]])"
       ]
      },
      "execution_count": 3,
@@ -71,8 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "u = rbarray([[2, 0, 0, 0, 0]])\n",
-    "v = rbarray([[0],\n",
+    "u = array([[2, 0, 0, 0, 0]])\n",
+    "v = array([[0],\n",
     "             [3],\n",
     "             [0],\n",
     "             [0],\n",
@@ -89,7 +89,7 @@
     {
      "data": {
       "text/plain": [
-       "rbarray([[2, 4, 5, 8, 0]])"
+       "array([[2, 4, 5, 8, 0]])"
       ]
      },
      "execution_count": 5,
@@ -109,11 +109,11 @@
     {
      "data": {
       "text/plain": [
-       "rbarray([[5],\n",
-       "         [3],\n",
-       "         [0],\n",
-       "         [0],\n",
-       "         [9]])"
+       "array([[5],\n",
+       "       [3],\n",
+       "       [0],\n",
+       "       [0],\n",
+       "       [9]])"
       ]
      },
      "execution_count": 6,
@@ -130,6 +130,34 @@
    "metadata": {},
    "source": [
     "**note:** Rank 1 arrays can cause unexpected results. See: [Notes from Andrew Ng Lecture](https://www.coursera.org/learn/neural-networks-deep-learning/lecture/87MUx/a-note-on-python-numpy-vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-1,  2,  3,  4,  0],\n",
+       "        [ 0, -1,  0,  2,  0],\n",
+       "        [ 0,  0,  1,  0,  0],\n",
+       "        [ 0,  0,  0, -1,  0],\n",
+       "        [ 2,  4,  5,  8,  1]]), array(3, dtype=int32))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "warshall(array([[-1,  2,  3,  0,  0],\n",
+    "             [ 0, -1,  0,  2,  0],\n",
+    "             [ 0,  0,  1,  0,  0],\n",
+    "             [ 0,  0,  0, -1,  0],\n",
+    "             [ 2,  0,  0,  0,  1]], dtype=np.int64))"
    ]
   },
   {
