--- a/notebooks/Linear Algebra of Red Black Graphs.ipynb
+++ b/notebooks/Linear Algebra of Red Black Graphs.ipynb
@@ -57,36 +57,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %load ../redblackgraph/simple/util.py\n",
-    "def nz_min(*args, **kwargs):\n",
-    "    '''\n",
-    "    nz_min(iterable, *[, default=0, key=func]) -> value\n",
-    "    nz_min(arg1, arg2, *args, *[, key=func]) -> value\n",
-    "\n",
-    "    With a single iterable argument, return its smallest non-zero item or 0 if iterable is empty. The\n",
-    "    default keyword-only argument specifies an object to return if\n",
-    "    the provided iterable is empty.\n",
-    "    With two or more arguments, return the smallest non-zero argument or 0 of no non-zero values in args.\n",
-    "    '''\n",
-    "    key = kwargs.get(\"key\", lambda x: x)\n",
-    "    default = kwargs.get(\"default\", 0)\n",
-    "    if len(args) == 1:\n",
-    "        args = args[0]\n",
-    "    mini = None\n",
-    "    for i in args:\n",
-    "        k_i = key(i)\n",
-    "        k_mini = key(mini)\n",
-    "        if mini == None or k_mini == 0 or (k_i < k_mini and not k_i == 0):\n",
-    "            mini = i\n",
-    "    return default if mini is None else mini"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -123,7 +93,7 @@
    "source": [
     "## Matrix multiplication\n",
     "\n",
-    "With scaler and vector *avos* products defined, extension to matrices is elementary. Given *A* and *B*, both matrices following the contraints defined for Red-Black adjacency matrices, and *C* = *A* *B*, the elements of $C_{ij}$ are given by the vector *avos* product of *row vector<sub>i</sub>* from A and *column vector<sub>j</sub>* from B\n",
+    "With scaler and vector *avos* products defined, extension to matrices is elementary. Given *A* and *B*, both matrices following the constraints defined for Red-Black adjacency matrices, and *C* = *A* *B*, the elements of $C_{ij}$ are given by the vector *avos* product of *row vector<sub>i</sub>* from A and *column vector<sub>j</sub>* from B\n",
     "\n",
     "Matrix multiplication of Red-Black adjacency matrices may seem a little abstract so let's consider a practical example to motivate the analysis. Given a Red-Black adjacency matrix, *A<sub>rb</sub>*, the result of $A_{rb}^2$ shows all vertices directly related by following up to 2 relationship edges, the result of $A_{rb}^3$ shows all vertices related by following up to 3 relationship edges, etc. For some *n* <= |*V*| there will be a $A_{rb}^n$ == $A_{rb}^+$.\n",
     "\n",
@@ -211,70 +181,6 @@
     "                nz_min(avos(uc_lambda[0][j], vc_lambda[i][0]), A_lambda[i][j])\n",
     "    A_lambda[N].append(u[0][N])\n",
     "    return A_lambda\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Numpy Implementation\n",
-    "\n",
-    "There is an [expiremental fork of numpy](https://github.com/rappdw/numpy) that provides an implementation of Red Black graphs by subclassing `ndarray` (as `rbarray`) and `matrix` (as `rbmatrix`). \n",
-    "\n",
-    "A simple example of usage follows:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[-1,  2,  3,  4,  0],\n",
-       "       [ 0, -1,  0,  2,  0],\n",
-       "       [ 0,  0,  1,  0,  0],\n",
-       "       [ 0,  0,  0, -1,  0],\n",
-       "       [ 2,  4,  5,  0,  1]])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "A = np.rbarray([[-1,  2,  3,  0,  0], # could also use np.rbmatrix(...)\n",
-    "                [ 0, -1,  0,  2,  0],\n",
-    "                [ 0,  0,  1,  0,  0],\n",
-    "                [ 0,  0,  0,  -1, 0],\n",
-    "                [ 2,  0,  0,  0,  1]], dtype=np.int64)\n",
-    "A @ A # matrix multiplication overridden to provide the avos matrix product\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([5, 3, 0, 0, 0])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "v = np.array([0, 3, 0, 0, 0], dtype=np.int64) # vector-matrix and matrix-vector avos product also available\n",
-    "\n",
-    "A @ v"
    ]
   },
   {
