--- a/notebooks/Linear Algebra of Red Black Graphs.ipynb
+++ b/notebooks/Linear Algebra of Red Black Graphs.ipynb
@@ -124,20 +124,22 @@
    "source": [
     "## Relational Composition\n",
     "\n",
-    "Let's consider how we might add a vertex to the graph that is not currently represented in the grapn and how we might update $A_{rb}^+$ as a result of the vertex addition. In order to introduce a vetex, $\\lambda$, into the graph, that vertex may connect to edges and may also have edges connect to it. This is represented by $\\vec v_{\\lambda, s}$ and $\\vec u_{\\lambda, s}$ for that vertex. Note however, that if $A_{rb}^+$ has dimension **N x N**, then $\\vec v_{\\lambda, s}$ and $\\vec u_{\\lambda, s}$ have dimension **N + 1**, where the final element for either $\\vec v_{\\lambda, s}$ and $\\vec u_{\\lambda, s}$ will either be -1 or 1 depending on whether the added vertex is red or black. Finally, we'll denote $A_{\\lambda, rb}^+$ as the transitive closure of the Red Black adjacency matrix of $A_{rb}$ with vetex $\\lambda$ added. We'll represent this notationally by:\n",
+    "Consider adding a vertex to the graph that is not currently represented and how we might update $A_{rb}^+$ as a result of the vertex addition. In order to introduce a vetex, $\\lambda$, into the graph, that vertex may connect to edges and may also have edges connect to it. This is represented by $\\vec u_{\\lambda, s}$, a row vector that captures direct edges from $\\lambda$ to existing vertices, and $\\vec v_{\\lambda, s}$, a column vector that captures direct edges from existing vertices to $\\lambda$. Note however, that if $A_{rb}^+$ has dimension **N x N**, then $\\vec v_{\\lambda, s}$ and $\\vec u_{\\lambda, s}$ have dimension **N + 1**, where the final element for either $\\vec u_{\\lambda, s}$ and $\\vec v_{\\lambda, s}$ will either be -1 or 1 depending on whether the added vertex is red or black. Finally, we'll denote $A_{\\lambda, rb}^+$ as the transitive closure of the Red Black adjacency matrix of $A_{rb}$ with vetex $\\lambda$ added. We'll represent this notationally by:\n",
     "\n",
     "\\begin{equation*}\n",
-    "A_{\\lambda, rb}^+ = \\vec v_{\\lambda, s} A_{rb}^+ \\vec u_{\\lambda, s}\n",
+    "A_{\\lambda, rb}^+ = \\vec u_{\\lambda, s} A_{rb}^+ \\vec v_{\\lambda, s}\n",
     "\\end{equation*}\n",
     "\n",
-    "and designate this formula as the **Relational Composition** of the transitive closure of a Red Black adjacency matrix.\n",
+    "and designate this relationship as the **Relational Composition** of the transitive closure of a Red Black adjacency matrix.\n",
     "\n",
-    "As we consider the operations necessary for this composition, recall our observation of the *avos* vector product, namely that the product of a simple row vector and the transitive closure of a Red Black adjacency matrix results in a closed row vector, and that the product of the transitive closure of a Red Black adjacency matrix and a simple column vector results in a closed column vector. If we remove the final element of $\\vec v_{\\lambda, s}$ and $\\vec u_{\\lambda, s}$ and apply this observation and then add in the final element to the resulting vectors, the result is $\\vec v_{\\lambda, c}$ and $\\vec u_{\\lambda, c}$. The complete row and column vectors can be appended as a new row and column respectively to $A_{rb}^+$ (think Numpy hstack and vstack operation). This new matrix is not yet quite what we are looking for. In order to ensure that it is transitively closed we need to examine each existing row and for each element where $\\vec v_{\\lambda, c}$ is non-zero, we need to update the element in the given row to the *avos* product of the column element in $\\vec v_{\\lambda, c}$ and the row element of the corresponding row in $\\vec u_{\\lambda, c}$.\n",
+    "As we consider the elementary operations necessary for this composition, recall our observation of the *avos* vector product, namely that the product of a simple row vector and the transitive closure of a Red Black adjacency matrix results in a closed row vector, and that the product of the transitive closure of a Red Black adjacency matrix and a simple column vector results in a closed column vector. If we remove the final element of $\\vec v_{\\lambda, s}$ and $\\vec u_{\\lambda, s}$ and apply this observation and then add in the final element to the resulting vectors, the result is $\\vec u_{\\lambda, c}$ and $\\vec v_{\\lambda, c}$. The complete row and column vectors can be appended as a new row and column respectively to $A_{rb}^+$. \n",
     "\n",
-    "Expressing this algorithmically, given $A_{rb}^+$, $\\vec v_{\\lambda, s}$ and $\\vec u_{\\lambda, s}$:\n",
+    "This new matrix does not quite represent the **relational composition**. In order to ensure that it is transitively closed we need to examine each existing row and for each element where $\\vec v_{\\lambda, c}$ is non-zero, we need to update the element in the given row to the *avos* product of the column element in $\\vec v_{\\lambda, c}$ and the row element of the corresponding row in $\\vec u_{\\lambda, c}$.\n",
     "\n",
-    "1. Remove the \"last\" dimension from both $\\vec v_{\\lambda, s}$ and $\\vec u_{\\lambda, s}$ resulting in $\\vec v'_{\\lambda, s}$ and $\\vec u'_{\\lambda, s}$\n",
-    "2. generate $\\vec v'_{\\lambda, c}$ by $\\vec v'_{\\lambda, s}$ $A_{rb}^+$ and $\\vec u'_{\\lambda, c}$ by $A_{rb}^+$ $\\vec u'_{\\lambda, s}$\n",
+    "Expressing this algorithmically, given $A_{rb}^+$, $\\vec u_{\\lambda, s}$ and $\\vec v_{\\lambda, s}$:\n",
+    "\n",
+    "1. Remove the \"last\" dimension from both $\\vec u_{\\lambda, s}$ and $\\vec v_{\\lambda, s}$ resulting in $\\vec u'_{\\lambda, s}$ and $\\vec v'_{\\lambda, s}$\n",
+    "2. generate $\\vec u'_{\\lambda, c}$ by $\\vec u_{\\lambda, s}$ $A_{rb}^+$ and $\\vec v'_{\\lambda, c}$ by $A_{rb}^+$ $\\vec v_{\\lambda, s}$\n",
     "3. Compose $A'_{\\lambda, rb}$ by:\n",
     "    1. appending $\\vec u'_{\\lambda, c}$ to $A_{rb}^+$ as a new row \n",
     "    2. Add the \"last\" dimension removed in step 1 as the \"last\" dimension of $\\vec u'_{\\lambda, c}$ resulting in $\\vec u_{\\lambda, c}$\n",
@@ -187,11 +189,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Loop Prevention\n",
+    "\n",
+    "An issue that can be encountered in systems that represent familial relationships is the inadvertent injection of graph cycles, resulting in the [\"I am my own Grandpa\"](https://en.wikipedia.org/wiki/I%27m_My_Own_Grandpa) case. While this is impossible when relationships model sexual reproduction, the introduction of step-relationships would make this a possibility. Often times there is ambiguity in the available historical records. If a researcher isn't careful, cylces may result.\n",
+    "\n",
+    "A modification to the relational_composition algorithm can prevent the introduction of cycles into a Red Black Graph. Vertices are added to an existing graph via relational composition. The intermedite vectors, $\\vec u'_{\\lambda, c}$ and $\\vec v'_{\\lambda, s}$ represent the complete ancestry and complete descedency for the new vertex $\\lambda$ respectively. The cycle consstraint would be invalidated should there be any vertex that simultaneously appears in the ancestry and descendency for a given vertex.\n",
+    "\n",
+    "This is easily validated in the **relational composition** algorithm and can be expressed more formally. Given $\\vec u'$ and $\\vec v'$ of dimension $n$ defined as $u'_{\\lambda, c}$ and $v'_{\\lambda, c}$ above. **Relational composition** is invalid if there exists a dimension $i$ where $i$ != $n$ and $u'_{i}$ != 0 and $v'_{i}$ != 0. The **relational composition** is valid otherwise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Areas of Further investigation\n",
     "\n",
     "* Determinants\n",
     "* Eigenvalues\n",
-    "* Loop prevention\n",
     "* *avos* properties (commutitivity, associativity, distribution, identity, inverse, etc.)\n",
     "* Spectral Graph Theory\n",
     "* Explore ideas to reduce dimensionality (embedding similar to word2vec, etc.)\n",
@@ -205,6 +219,13 @@
     "    * a(v + w) = av + aw\n",
     "    * (a + b)v = av + bv"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
